--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,7 @@ dist
 /examples/example-app/.next
 /examples/example-app/package.json
 /examples/example-app/package-lock.json
+
+.tshy
+.tshy-build
+.turbo
