--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,8 @@
 {
+  "$schema": "https://json.schemastore.org/tsconfig",
+  "extends": "@total-typescript/tsconfig/tsc/dom/library",
   "compilerOptions": {
-    "target": "esnext",
-    "module": "esnext",
-    "strict": true,
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "baseUrl": ".",
-    "declaration": true,
-    "emitDeclarationOnly": true,
-    "outDir": "./dist",
+    "customConditions": ["@systemfsoftware/source"],
     "paths": {
       "@/test-module": ["./src/__example-files__/test-module"],
       "next-plugin-preval": ["./src"]
